[package]
name = "roguelike"
version = "0.1.0"
authors = ["Joe Beltramo <proshadedesignz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcod = { version = "0.15.0", features = ["serialization"] }
rand = "0.7.2"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
